<resources>
    <string name="app_name">POCR</string>
    <string name="emailHint">E-Mail</string>
    <string name="passHint">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="youcanalso">You also can</string>
    <string name="signIn">Sign in</string>
    <string name="passRepeatHint">Repeat password</string>
    <string name="app_name_full">Portable OCR</string>
    <string name="orSignIn">Have an account?</string>
    <string name="orSignUp">Don´t have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="whyAccount">Why do I have to create an account?</string>
    <string name="whyAccountInfo">Creating an account will help you to personalize your experience and have records of the texts you´ve scanned before.</string>
    <string name="ok">OK</string>
    <string name="inputError">This field can´t be empty!</string>
    <string name="successCreatingUser">Your account has been successfully created!</string>
    <string name="errorCreatingUserTitle">An error has ocurred :(</string>
    <string name="errorCreatingUserDesc">We couldn´t create an account for you... Please try later.</string>
    <string name="passwdNotSame">Passwords don´t match!</string>
    <string name="loadingTitle">Loading...</string>
    <string name="loadingMessage">We´re preparing everything for you :)</string>
    <string name="passwdSixChars">Password must be at least 6 characters</string>
    <string name="home">Welcome!</string>
    <string name="errorSigningInTitle">Sign in failed</string>
    <string name="errorSigningInDesc">E-Mail or password is incorrect, please check later.</string>
    <string name="logout">Log out</string>
    <string name="logoutTitle">Logout</string>
    <string name="logoutDesc">Are you sure of logging out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan a photo</string>
    <string name="history">History</string>
    <string name="uploadAutomaticallyText">Upload data automatically when scanned</string>
    <string name="help">Help</string>
    <string name="tipsButton">Tips</string>
    <string name="tipsText">How to correctly use this app</string>
    <string name="permissions_needed_title">Permissions</string>
    <string name="permissions_needed_message">In order to take photos or pick them from your gallery this apps needs your permission to access the camera and storage.</string>
    <string name="permissions_given">Everything is ready now! :)</string>
    <string name="fromGallery">Pick from gallery</string>
    <string name="fromCamera">Take a photo</string>
    <string name="fromWhere">Where is the photo?</string>
    <string name="type">image/*</string>
    <string name="newPic">image</string>
    <string name="result">Result</string>
    <string name="packageName">com.bardia.pocr</string>
    <string name="updateAutomatically">updateInDatabase</string>
    <string name="updateAutoOn">Data will be saved automatically in the database</string>
    <string name="updateAutoOff">Save data manually by pressing the upload button when you finished scanning the text</string>
    <string name="resultHint">Result</string>
    <string name="updateAutoButtonText">Upload data to database</string>
    <string name="errorImage">This picture may be corrupted</string>
    <string name="uri">ImageUri</string>
    <string name="errorRecognizer">Something has gone wrong...</string>
    <string name="textNotDetectedTitle">There isn´t any text... :(</string>
    <string name="textNotDetectedMessage">Seems like the app´s text recognizer hasn´t detected any text in the image... But always you can try to take another picture!</string>
    <string name="updateTextButton">Upload data to database</string>
    <string name="complete">Scanning complete!</string>
    <string name="successUpdating">Text successfully updated</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="copiedToClipboard">Text copied to clipboard</string>
    <string name="share">Share</string>
    <string name="scanAnother">Scan another photo</string>
    <string name="generatedKey">KEY_FOR_NODE</string>
    <string name="arraylist">ArrayList</string>
    <string name="bundle">Bundle</string>
    <string name="deleteItemTitle">Delete item</string>
    <string name="deleteItemMessage">Are you sure you that want to delete this item from your history?</string>
    <string name="deleteSuccess">Item deleted successfully</string>
    <string name="deleteFailed">Deleting item failed...</string>
    <string name="itemDetailTitle">Overview</string>
    <string name="connectionTextON">You are connected to internet :)</string>
    <string name="connectionTextOFF">Seems like you don´t have internet connection...</string>
    <string name="aboutThisApp">About this app</string>
    <string name="emptyHistory">This place is empty! Start scanning photos in order to save them</string>
    <string name="connectionTitle">No connection</string>
    <string name="connectionMessage">Seems like there´s no connection to internet... Please try again later.</string>
    <string name="offlineInsert">Text will be uploaded when connection is restablished</string>
    <string name="offlineObjectsUploaded">Connection restablished and enqueued requests succesfully made!</string>
    <string name="help_1">Try to take a clear photo of your text or select a picture from your gallery. Asolate the text from other elements that could disturb the text recognition process. Try to align horizontally the text. The buttons in the top of the crop screen will help you to rotate the picture.</string>
    <string name="help_2">Correct any mispelling errors that could appear in your text after the recognition process. Don´t worry, you can update the text in the database later.</string>
    <string name="tipsDialogTitle">Tips</string>
    <string name="about">About this app</string>
    <string name="aboutMessage">App developed on Android studio by Bardia. The technologies used in this app are: Google Vision, Room Database, Firebase Realtime Database and TheArtOfDev`s image cropper.</string>
</resources>
